--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <!-- <script src="https://unpkg.com/pagedjs/dist/paged.polyfill.js"></script> -->
+    <link href="https://arcms.w4v.es/Assets/Supreme/stylesheet.css" rel="stylesheet" />
   </head>
   <body>
     <div id = "portfolio">
@@ -19,16 +19,10 @@
       <h2>Title of Project</h2>
     </div>
 
-    <div class = "text-box note">
-      covid note
-    </div>
 
-    <div class = "section">
-      <h2>Introduction</h2>
-      <p class = "text-box">
-        introduction test
-      </p>
-    </div>
+    <h1>IDENTIFICATION AND EXPLORATION OF THE NEED</h1>
+
+
 
     <div class = "section">
       <h2>Design Brief</h2>
@@ -62,31 +56,62 @@
           </div>
         </div>
     </div>
-<!--
-    <table>
-      <thead>
-        <td colspan = "2">
-          identif
-        </td>
-      </thead>
-      <tbody>
-        <tr>
-          <td>this</td><td>that</td>
-        </tr>
-        <tr>
-          <td>this</td><td>that</td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <td colspan = "2">
-          sdfhkjsfj
-        </td>
-      </tfoot>
 
-    </table> -->
+    <div class = "section">
+      <h2>Recreational Activity Impacts on Visually Impaired Individuals</h2>
+      <p class = "text-box">
+        rect act
+      </p>
+    </div>
 
-    <table name = "test">
-    </table>
+
+
+    <div class = "section">
+      <h2>Impacts of Limited Sports on Individuals</h2>
+      <p class = "text-box">
+        impacts limit
+      </p>
+    </div>
+
+
+    <div class = "section">
+      <h2>Stated Health Benefits from Regular Physical Activity</h2>
+      <p class = "text-box">
+        health ben
+      </p>
+    </div>
+
+    <div class = "section">
+      <h2>Change of demand over the years through participating organisations from the blindness and low vision sector</h2>
+      <img src="./Resources/Images/demand of change.png" />
+      <p class = "text-box">
+        change demand
+      </p>
+    </div>
+
+
+    <div class = "section">
+      <h2>Claimed Physical Activity Restrictions</h2>
+      <p class = "text-box">
+        claimed
+      </p>
+    </div>
+
+
+    <div class = "section ong">
+      <h2>Ongoing Evaluation</h2>
+      <p class = "text-box">
+        ong1
+      </p>
+    </div>
+
+
+    <div class = "section">
+      <h2>Applications of conclusions to MDP</h2>
+      <p class = "text-box">
+        Applications of conclusions to MDP
+      </p>
+    </div>
 
 
   </div>
@@ -110,13 +135,20 @@
     }
 
 
-
+    h1{
+      text-align: center;
+    }
 
 
     h2 {
       margin: 0;
       margin-bottom: calc(var(--w)*0.01);
 
+    }
+
+    .ong {
+      background: #ff980075;
+      padding: 1em;
     }
 
     table {
@@ -169,7 +201,7 @@
     }
 
     .section {
-      padding-bottom: 2em;
+      margin-bottom: 2em;
     }
 
     .p-left {
@@ -184,7 +216,6 @@
     .p-right {
       padding-left: calc(var(--w) * 0.015) ;
     }
-
 
     .col {
       display: flex;
