--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
       </p>
     </div>
 
+
+
+
     <div class = "section ccgs">
         <div class = "col">
           <div class = "row">
@@ -432,6 +435,56 @@
 
 
 
+  <h1>EVIDENCE & APPLICATION OF PRACTICAL SKILLS TO PRODUCE A QUALITY PROJECT</h1>
+
+
+  <div class = "section">
+    <h2>Carving and Casting Climbing Holds</h2>
+    <p class = "text-box">
+      CCCH
+    </p>
+  </div>
+
+  <table name="ResinModel"></table>
+
+
+  <div class = "section ong">
+    <h2>Ongoing Evaluation</h2>
+    <p class = "text-box">
+      ong15
+    </p>
+  </div>
+
+
+
+
+  <div class = "section">
+    <h2>Formation of Route Algorithm, Procedure, and Explanation</h2>
+    <p class = "text-box">
+      RouteA
+    </p>
+  </div>
+
+  <div class = "section ong">
+    <h2>Ongoing Evaluation</h2>
+    <p class = "text-box">
+      ong16
+    </p>
+  </div>
+
+  <img src="./Resources/Images/E24.jpg" />
+  <img src="./Resources/Images/E25.jpg" />
+
+  <div class = "section">
+    <h2>Coding</h2>
+    <p class = "text-box">
+      Coding
+    </p>
+  </div>
+
+  <table name="CodingTable"></table>
+
+  <h1>USE OF COMMUNICATION & PRESENTATION TECHNIQUES</h1>
 
 
   </div>
