--- a/index.html
+++ b/index.html
@@ -433,7 +433,15 @@
     </p>
   </div>
 
+  <h1>USE OF COMMUNICATION & PRESENTATION TECHNIQUES</h1>
 
+  <table name="DS"></table>
+
+  <img src="./Resources/Images/Loadcell.svg" />
+  <img src="./Resources/Images/chart2.png" />
+  <img src="./Resources/Images/demand of change.png" />
+  <img width="100%" src="./Resources/Images/exploded hold diagram.jpg" />
+  <img width="60%"src="./Resources/Images/hold diagram.jpg" />
 
   <h1>EVIDENCE & APPLICATION OF PRACTICAL SKILLS TO PRODUCE A QUALITY PROJECT</h1>
 
@@ -484,7 +492,7 @@
 
   <table name="CodingTable"></table>
 
-  <h1>USE OF COMMUNICATION & PRESENTATION TECHNIQUES</h1>
+
 
 
   </div>
