--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link href="./Table of Contents/style.css" rel="stylesheet" />
+
+
+
+
+
+
+
+
     <meta charset="utf-8">
     <title>Design & Technology Portfolio</title>
     <link href="https://arcms.w4v.es/Assets/Supreme/stylesheet.css" rel="stylesheet" />
@@ -19,6 +28,7 @@
       <h2>Title of Project</h2>
     </div>
 
+    <div id = "table-of-contents" class = "title-page"></div>
 
     <h1>IDENTIFICATION AND EXPLORATION OF THE NEED</h1>
 
@@ -211,7 +221,7 @@
       </p>
     </div>
 
-
+    <h1>EVIDENCE OF CREATIVITY</h1>
 
     <div  class = "section">
       <h2>Exploration of Existing Ideas</h2>
@@ -246,8 +256,7 @@
 
 
 
-    <h1>EVIDENCE OF CREATIVITY</h1>
-    <h2>Initial Sketches</h2>
+    <h5>Initial Sketches</h5>
 
 
     <div  class = "section">
@@ -290,7 +299,7 @@
 
 
     <div  class = "section">
-      <h1>Physical Aspect</h1>
+      <h5>Physical Aspect</h5>
       <p class = "text-box">
         N1
       </p>
@@ -343,7 +352,7 @@
 
 
       <div  class = "section">
-        <h1>Electronic Housing</h1>
+        <h5>Electronic Housing</h5>
         <h2>Housing 1</h2>
         <img width="35%"src="./Resources/Images/H1.svg" />
         <table name="HPMI1"></table>
@@ -374,7 +383,7 @@
       </div>
 
 
-      <h1>Electronics</h1>
+      <h5>Electronics</h5>
         <img width="60%"src="./Resources/Images/C1.svg" />
         <img width="60%" src="./Resources/Images/C2.svg" />
         <img width="60%"src="./Resources/Images/C3.svg" />
@@ -400,7 +409,94 @@
           </p>
         </div>
 
-<h1>APPROPRIATE RESEARCH & EXPERIMENTATION OF MATERIALS, TOOLS, TECHNIQUES & TESTING OF DESIGN SOLUTIONS</h1>
+      <h1>APPROPRIATE RESEARCH & EXPERIMENTATION OF MATERIALS, TOOLS, TECHNIQUES & TESTING OF DESIGN SOLUTIONS</h1>
+
+      <h5>Capacitive Sensor</h5>
+        <p class = "text-box">
+          firste
+        </p>
+
+        <table name="TE1"></table>
+        <table name="TE2"></table>
+        <table name="TE3"></table>
+        <table name="TE4"></table>
+        <table name="TSE5"></table>
+        <table name="TSE6"></table>
+        <div class = "section ong">
+          <h2>Ongoing Evaluation</h2>
+          <p class = "text-box">
+            ong18
+          </p>
+        </div>
+
+
+        <h5>Electronic Housing</h5>
+        <table name="HT1"></table>
+
+
+
+        <h5>Route Algorithm Experimentation</h5>
+        <table name="RT1"></table>
+        <table name="RT2"></table>
+        <div class = "section ong">
+          <h2>Ongoing Evaluation</h2>
+          <p class = "text-box">
+            ong19
+          </p>
+        </div>
+
+
+        <h5>Physical Experimentation</h5>
+        <table name="PT1"></table>
+        <table name="PT2"></table>
+        <div class = "section ong">
+        <h2>Ongoing Evaluation</h2>
+        <p class = "text-box">
+          ong20
+        </p>
+      </div>
+
+
+      <h5>Vibrating motors/actuators Experimentation</h5>
+      <table name="AT1"></table>
+      <table name="AT2"></table>
+      <table name="AT3"></table>
+      <div class = "section ong">
+      <h2>Ongoing Evaluation</h2>
+      <p class = "text-box">
+        ong21
+      </p>
+    </div>
+
+    <h2>Applications and evaluation</h2>
+
+      <img src="./Resources/Images/AOF.svg" />
+      <div class = "section ong">
+      <h2>Final Ongoing Evaluation of Experimentation and Testing </h2>
+      <p class = "text-box">
+        ong22
+      </p>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <h1>IDENTIFICATION & JUSTIFICATION OF IDEAS AND RESOURCES USED</h1>
@@ -434,11 +530,18 @@
 
   <table name="DS"></table>
 
-  <img src="./Resources/Images/Loadcell.svg" />
-  <img src="./Resources/Images/chart2.png" />
-  <img src="./Resources/Images/demand of change.png" />
-  <img width="100%" src="./Resources/Images/exploded hold diagram.jpg" />
-  <img width="60%"src="./Resources/Images/hold diagram.jpg" />
+  <table name="visualtechniques"></table>
+  <p class = "text-box">
+    VD
+  </p>
+
+  <div class = "section ong">
+    <h2>Ongoing Evaluation</h2>
+    <p class = "text-box">
+      ong17
+    </p>
+  </div>
+
 
   <h1>EVIDENCE & APPLICATION OF PRACTICAL SKILLS TO PRODUCE A QUALITY PROJECT</h1>
 
@@ -493,11 +596,69 @@
   <table class = "eval-sections" name = "eval sections"></table>
 
 
+  <h1>ANALYSIS AND EVALUATION OF FUNCTIONAL & AESTHETIC ASPECTS OF DESIGN</h1>
+  <p class = "text-box">
+    AIA
+  </p>
+  <table name="AIA"></table>
+
+  <div class = "section">
+    <h2>Route Climabilty-⦿</h2>
+    <p class = "text-box">
+    RC
+    </p>
+  </div>
+
+  <div class = "section">
+    <h2>The Climbing Holds Ability in Detecting Whether the Climbing Hold is Held or Stood on-⦾</h2>
+    <p class = "text-box">
+    TC
+    </p>
+  </div>
+
+  <div class = "section">
+    <h2>Accurate Sound Indications-⦾</h2>
+    <p class = "text-box">
+    AC
+    </p>
+  </div>
+
+  <div class = "section">
+    <h2>Adjustability of climbing route difficulty-⦿</h2>
+    <p class = "text-box">
+    AR
+    </p>
+  </div>
+
+  <div class = "section">
+    <h2>Technologies resistance to water damage-◙</h2>
+    <p class = "text-box">
+    TR
+    </p>
+  </div>
+
+  <h1>FINAL EVALUATION WITH RESPECT TO THE PROJECT’S IMPACT ON THE INDIVIDUAL, SOCIETY AND THE ENVIRONMENT</h1>
+  <table name="Society"></table>
+  <table name="Indavidual"></table>
+  <table name="Enviroment"></table>
+
+  <h1>RELATIONSHIP OF THE FINAL PRODUCT, SYSTEM OR ENVIRONMENT TO THE PROJECT PROPOSAL</h1>
+  <table name="Last"></table>
+
+  <h1>Bibliography</h1>
+  <div class = "section">
+    <h2>Citations</h2>
+    <p class = "text-box">
+    BIB
+    </p>
+  </div>
+
   </div>
   </body>
 
   <script type = "module">
     import {loadTextBoxes, loadTables} from "./importer.js";
+    import {makeContents} from "./Table of Contents/table-of-contents.js";
     loadTextBoxes("./Resources/textBoxes/");
     loadTables("./Resources/Tables/");
     window.onclick = () => {
@@ -506,8 +667,9 @@
         block: "center",
       });
     }
-
+    makeContents("portfolio", "table-of-contents");
   </script>
+
 
   <style>
 
@@ -530,6 +692,10 @@
     }
     h1{
       text-align: center;
+    }
+    h5{
+      text-align: center;
+      font-size: 2em;
     }
     h4 {
       margin: 0;
