--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
 
     <div class = "title-page">
-      <h1>Student Number</h1>
-      <h2>Title of Project</h2>
+      <h1>Student Number:33483627</h1>
+      <h5>Vision Impaired Rock CLimbing</h5>
+      <img width="100%"src="./Resources/Images/hold diagram.jpg" />
     </div>
 
     <div id = "table-of-contents" class = "title-page"></div>
